
(Mark Diggory)
- Change "View Licence" to "View License" in Messages.properties

(Robert Tansley)
- Error pages now return appropriate HTTP status codes (e.g. 404 not found)
- Bad filenames in /bitstream/ URLs now result in 404 error -- prevents
  infinite URL spaces confusing crawlers and bad "persistent" bitstream IDs
  circulating

1.4.1 beta 1
============
(Scott Yeadon)
- Jar file updates (includes required code changes for DSIndexer and DSQuery and new jars
  fontbox.jar and serializer.jar)
- SF bug #1556829 Docs mention old SiteAuthenticator class
- SF bug #1532389 Item Templates do not work for non-dc fields

(Vlastimil Krejcir)
- SF patch #1588008 Bitstream authorization timeout patch

(Claudia Juergen)
- SF patch 1578936 for SF bug #1066771 Metadata edit form dropping DC qualifier
- removed reference to "Local DSpace Administrator Contact Information" in
  docs/index.html
  docs/configure.html
- added a note about contact info in "The Wording of E-Mails" in
  docs/configure.html
- config/registries/dublin-core-types.xml replaced deprecated reference to org.dspace.administer.DCType.java 
  with the reference to the appropriate org.dspace.content.Metadata... classes
- docs/configure.html
  updated "The Dublin Core and Bitstream Format Registries" for multiple metadata schemas
- docs/appenx.html
  added overviews of the default Dublin Core Metadata and Bitstream Registry
- SF patch #1584297 for SF bug #1548738 Multiple Metadata Schema, schema not shown on edit item page
- SF patch #1589906 for SF bug #589895  Not possible to add unqualified Metadata Field

(Robert Tansley)
- SF patch #1565975 HandleServlet and BitstreamServlet support If-Modified-Since
  requests

(Bernadette Schlonsok)
- SF patch #1490857  XHTML Compliance of 1.4 alpha 1
- minor changes for XHTML/WAI compliance of controlled vocabularies addon
- minor changes for XHTML compliance of suggest item feature
- minor changes for XHTML compliance

(Larry Stone)