@@ -592,6 +592,22 @@ webui.suggest.recipient = colleague
 #
 # webui.controlledvocabulary.enable = true
 
+#### Multi-file HTML document/site settings #####
+#
+# When serving up composite HTML items, how deep can the request be for us to
+# serve up a file with the same name?
+#
+# e.g. if we receive a request for "foo/bar/index.html"
+# and we have a bitstream called just "index.html"
+# we will serve up that bitstream for the request if webui.html.max-depth-guess
+# is 2 or greater.  If webui.html.max-depth-guess is 1 or less, we would not
+# serve that bitstream, as the depth of the file is greater.
+#
+# If webui.html.max-depth-guess is zero, the request filename and path must
+# always exactly match the bitstream name.  Default value is 3.
+#
+# webui.html.max-depth-guess = 3
+
 #### Checksum Checker Settings ####
 # Default dispatcher in case none specified
 plugin.single.org.dspace.checker.BitstreamDispatcher=org.dspace.checker.SimpleDispatcher
